﻿[section Changelog]
[no-subsection-numbers]

[section#v0_9 Version 0.9.0, 2011-04-26]

- @Highlights@
- @Changes to high-level API@
- [@ Removed variants of `many`, `sepBy`, `sepEndBy` and `manyTill`]
- [@ Details on changes to `manyChars`, `manyCharsTill` and their variants]
- @Changes to low-level API@
- @Background on low-level API changes@

[dl
[ #Highlights#]
[
- a new @tutorial@ and @user's guide@
- 2x performance improvements due to a refactored low-level API
- new `identifier` parser for parsing identifiers based on Unicode XID syntax
- new `StaticMapping` module for compiling static key to value
  mappings into optimized functions (supports `char`, `int` and `string`
  as key types)
]

[[# Changes to high-level API]]
[
- the modules `FParsed.Primitives`, `FParsec.CharParsers` and `FParsec.Error` are now automatically opened when the `FParsec` namespace is opened
- new combinators `.>>.`, `.>>.?`, `notEmpty`, `stringsSepBy`
- new parsers `identifier`, `[^unicodeSpaces-parsers unicodeSpaces[1]]`, `notFollowedByEof`
- `whitespace` and `unicodeWhitespace` has been removed
- `unicodeNewline` no longer recognizes the form feed char `'\f'` (`'\u000C'`) as a newline character
- some variants of `many`, `sepBy`, `sepEndBy`and `manyTill` [^removed-variants-of-many-sepby-sependby-and-manytill have been removed]
- the `...FoldApply` inline variants of `many`, `sepBy`, `sepEndBy` and `manyTill`
  have been consolidated in the `[^reference.Primitives.members.Inline FParsec.Primitives.Inline]` helper class
- sequence parsers now throw a `System.InvalidOperationException` instead of a `System.Exception` to prevent an infinite loop
- `pstring`, `notFollowedByString` and similar parsers now have optimized code paths
  for argument strings with only 1 char
- the behaviour of `manyChars` and `manyCharsTill` and their variants [^details-on-changes-to-manychars-manycharstill-and-their-variants has slightly changed]