@@ -64,65 +64,69 @@
                 <tbody class="nav-before-open n4">
                  <tr class="nav-entry n4 _1">
                   <td class="nav-number n4"></td>
-                  <td class="nav-title n4"><a href="#v0_9">Version 0.9.0, 2011‒04‒26</a></td>
+                  <td class="nav-title n4"><a href="#v0_9_1">Version 0.9.1, 2011‒05‒22</a></td>
                  </tr>
                  <tr class="nav-entry n4 _2">
+                  <td class="nav-number n4"></td>
+                  <td class="nav-title n4"><a href="#v0_9">Version 0.9.0, 2011‒04‒26</a></td>
+                 </tr>
+                 <tr class="nav-entry n4 _3">
                   <td class="nav-number n4"></td>
                   <td class="nav-title n4"><a href="#v0_8_x">Version 0.8.x, no release</a></td>
                  </tr>
-                 <tr class="nav-entry n4 _3">
+                 <tr class="nav-entry n4 _4">
                   <td class="nav-number n4"></td>
                   <td class="nav-title n4"><a href="#v0_7_3_1">Version 0.7.3.1, 2009‒02‒26</a></td>
                  </tr>
-                 <tr class="nav-entry n4 _4">
+                 <tr class="nav-entry n4 _5">
                   <td class="nav-number n4"></td>
                   <td class="nav-title n4"><a href="#v0_7_3">Version 0.7.3, 2008‒12‒08</a></td>
                  </tr>
-                 <tr class="nav-entry n4 _5">
+                 <tr class="nav-entry n4 _6">
                   <td class="nav-number n4"></td>
                   <td class="nav-title n4"><a href="#v0_7_2">Version 0.7.2, 2008‒11‒17</a></td>
                  </tr>
-                 <tr class="nav-entry n4 _6">
+                 <tr class="nav-entry n4 _7">
                   <td class="nav-number n4"></td>
                   <td class="nav-title n4"><a href="#v0_7_1">Version 0.7.1, 2008‒09‒29</a></td>
                  </tr>
-                 <tr class="nav-entry n4 _7">
+                 <tr class="nav-entry n4 _8">
                   <td class="nav-number n4"></td>
                   <td class="nav-title n4"><a href="#v0_7_0_1">Version 0.7.0.1, 2008‒09‒23</a></td>
                  </tr>
-                 <tr class="nav-entry n4 _8">
+                 <tr class="nav-entry n4 _9">
                   <td class="nav-number n4"></td>
                   <td class="nav-title n4"><a href="#v0_7">Version 0.7.0, 2008‒09‒13</a></td>
                  </tr>
-                 <tr class="nav-entry n4 _9">
+                 <tr class="nav-entry n4 _0">
                   <td class="nav-number n4"></td>
                   <td class="nav-title n4"><a href="#v0_6">Version 0.6.0, 2008‒05‒20</a></td>
                  </tr>
-                 <tr class="nav-entry n4 _0">
+                 <tr class="nav-entry n4 _1">
                   <td class="nav-number n4"></td>
                   <td class="nav-title n4"><a href="#v0_5_1">Version 0.5.1, 2008‒01‒20</a></td>
                  </tr>
-                 <tr class="nav-entry n4 _1">
+                 <tr class="nav-entry n4 _2">
                   <td class="nav-number n4"></td>
                   <td class="nav-title n4"><a href="#v0_5">Version 0.5.0, 2008‒01‒15</a></td>
                  </tr>
-                 <tr class="nav-entry n4 _2">
+                 <tr class="nav-entry n4 _3">
                   <td class="nav-number n4"></td>
                   <td class="nav-title n4"><a href="#v0_4_4">Version 0.4.4, 2008‒01‒13</a></td>
                  </tr>
-                 <tr class="nav-entry n4 _3">
+                 <tr class="nav-entry n4 _4">
                   <td class="nav-number n4"></td>
                   <td class="nav-title n4"><a href="#v0_4_3">Version 0.4.3, 2008‒01‒12</a></td>
                  </tr>
-                 <tr class="nav-entry n4 _4">
+                 <tr class="nav-entry n4 _5">
                   <td class="nav-number n4"></td>
                   <td class="nav-title n4"><a href="#v0_4_2">Version 0.4.2, 2008‒01‒04</a></td>
                  </tr>
-                 <tr class="nav-entry n4 _5">
+                 <tr class="nav-entry n4 _6">
                   <td class="nav-number n4"></td>
                   <td class="nav-title n4"><a href="#v0_4_1">Version 0.4.1, 2008‒01‒02</a></td>
                  </tr>
-                 <tr class="nav-entry n4 _6">
+                 <tr class="nav-entry n4 _7">
                   <td class="nav-number n4"></td>
                   <td class="nav-title n4"><a href="#v0_4">Version 0.4.0, 2007‒12‒30</a></td>
                  </tr>
@@ -187,6 +191,33 @@
  </div>
  <div class="section s2">
   <h1 class="title h2"><span>Changelog</span></h1>
+  <div id="v0_9_1" class="section s3">
+   <h2 class="title h3"><span>Version 0.9.1, 2011‒05‒22</span></h2>
+   <div class="intro i3">
+    <div class="para _1 lcinp">
+     <ul class="l1">
+      <li class="_1">
+       added <span class="tt">/nooptimizationdata</span> compiler flag as a workaround for an F# comiler <a
+       href="https://bitbucket.org/fparsec/main/issue/16/fparsec-needs-nooptimizationdata-to-avoid">issue</a> (reported by Michael Giagnocavo ‐ thanks
+       Michael!)
+      </li>
+      <li class="_2">
+       fixed an <a href="https://bitbucket.org/fparsec/main/issue/17/json-parser-fails-to-build">issue</a> in the JSON sample (reported by Ryan Riley
+       ‐ thanks Ryan!)
+      </li>
+      <li class="_3">
+       fixed the error message formatting when an error line contains unaccounted newlines or ends with a combining character sequence
+      </li>
+      <li class="_4">
+       added warning to <a href="../download-and-installation.html#building-fparsec-with-mono">installation notes</a> that the <code class="fsharp"><a
+       href="../reference/charparsers.html#members.regex"><span class="ci">regex</span></a></code> parser doesn’t work on Mono (reported by Laurent Le
+       Brun ‐ thanks Laurent!)
+      </li>
+      <li class="_5">fixed some documentation issues (one of which was reported by Michael Giagnocavo ‐ thanks Michael!)</li>
+     </ul>
+    </div>
+   </div>
+  </div>
   <div id="v0_9" class="section s3">
    <h2 class="title h3"><span>Version 0.9.0, 2011‒04‒26</span></h2>
    <div class="intro i3">
@@ -303,7 +334,7 @@
            <p>Some renamings and function signature changes:</p>
            <div id="v0_9.renamings" class="table">
             <table cellspacing="0">
-             <caption><span class="table-caption-prefix">Table <span class="table-number">1.3.1.1</span></span></caption>
+             <caption><span class="table-caption-prefix">Table <span class="table-number">1.3.2.1</span></span></caption>
              <thead>
               <tr class="_1">
                <th class="_1">Old</th>
