@@ -117,7 +117,7 @@
    </div>
    <div class="para _5">
     <p>
-     <span class="i"><strong>Latest release:</strong></span> FParsec 0.9, 2011‒04‒26, <a
+     <span class="i"><strong>Latest release:</strong></span> FParsec 0.9.1, 2011‒05‒22, <a
      href="https://bitbucket.org/fparsec/main/downloads">Download</a>, <a href="about/changelog.html">Changes</a>
     </p>
    </div>
