@@ -1,6 +1,15 @@
 ﻿[section Changelog]
 [no-subsection-numbers]
 
+
+[section#v0_9_1 Version 0.9.1, 2011-05-22]
+- added [= /nooptimizationdata] compiler flag as a workaround for an F# comiler [url "https://bitbucket.org/fparsec/main/issue/16/fparsec-needs-nooptimizationdata-to-avoid" issue] (reported by Michael Giagnocavo - thanks Michael!)
+- fixed an [url "https://bitbucket.org/fparsec/main/issue/17/json-parser-fails-to-build" issue] in the JSON sample (reported by Ryan Riley - thanks Ryan!)
+- fixed the error message formatting when an error line contains unaccounted newlines or ends with a combining character sequence
+- added warning to [^building-fparsec-with-mono installation notes] that the `regex` parser doesn't work on Mono (reported by Laurent Le Brun - thanks Laurent!)
+- fixed some documentation issues (one of which was reported by Michael Giagnocavo - thanks Michael!)
+[/section]
+
 [section#v0_9 Version 0.9.0, 2011-04-26]
 
 - @Highlights@
